[gd_scene load_steps=6 format=3 uid="uid://b62frchqi1wmp"]

[ext_resource type="Script" uid="uid://d411eewvp7a" path="res://scripts/main_menu.gd" id="1_r150o"]

[sub_resource type="Curve" id="Curve_r150o"]
_data = [Vector2(0.4555556, 0.39325845), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="Curve" id="Curve_idj7w"]
_data = [Vector2(0.30555555, 0.25842702), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="Curve" id="Curve_kln2b"]
_data = [Vector2(0.07222222, 0.25842702), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_rgh2o"]
curve_x = SubResource("Curve_r150o")
curve_y = SubResource("Curve_idj7w")
curve_z = SubResource("Curve_kln2b")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r150o")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CurveXYZTexture_rgh2o")
stretch_mode = 1

[node name="MenuPanel" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="MenuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -720.0
offset_bottom = -1280.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel/CenterContainer"]
layout_mode = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="MenuPanel/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="LevelsList" type="VBoxContainer" parent="MenuPanel/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="LevelRoot" type="Node" parent="."]

[node name="GameOverLayer" type="CanvasLayer" parent="."]

[node name="GameOverPanel" type="CenterContainer" parent="GameOverLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -720.0
offset_bottom = -1280.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverLayer/GameOverPanel"]
layout_mode = 2

[node name="GameOverLabel" type="Label" parent="GameOverLayer/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Игра окончена!"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverLayer/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Перезапустить уровень"

[node name="BackToMenuButton" type="Button" parent="GameOverLayer/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "В главное меню"
